Check for String IDs of scripts additionally in d files.