@@ -17,13 +17,9 @@ package dialog.parser;
 import dialog.TranslationString;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.SortedMap;
+import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -32,11 +28,11 @@ import java.util.regex.Pattern;
  */
 public class ScriptContentParser implements IParser {
 
-    private final static Pattern ADDJOURNALENTRY = Pattern.compile("AddJournalEntry\\((\\d+),[^)]+\\) {2}// ([^\\n]+)");
+    private final static Pattern ADDJOURNALENTRY = Pattern.compile("AddJournalEntry\\((\\d+),[^)]+\\)( {2}// ([^\\n]+))?");
     private final static Pattern DISPLAYSTRINGHEAD =
-            Pattern.compile("DisplayStringHead\\(\"([^\"]+)\",(\\d+)\\) {2}// ([^\\n]+)");
+            Pattern.compile("DisplayStringHead\\(\"([^\"]+)\",(\\d+)\\)( {2}// ([^\\n]+))?");
     private final static Pattern DISPLAYSTRINGWAIT =
-            Pattern.compile("DisplayStringWait\\(\"([^\"]+)\",(\\d+)\\) {2}// ([^\\n]+)");
+            Pattern.compile("DisplayStringWait\\(\"([^\"]+)\",(\\d+)\\)( {2}// ([^\\n]+))?");
 
     private final SortedMap<Integer, TranslationString> idsToDialogs;
     private SortedMap<String, List<Integer>> fileNamesToIds;
@@ -47,8 +43,7 @@ public class ScriptContentParser implements IParser {
      * @param idsToDialogs   the map where the relations between string IDs and dialog texts are stored
      * @param fileNamesToIds the map where the relations between file names and string IDs are stored
      */
-    public ScriptContentParser(SortedMap<Integer, TranslationString> idsToDialogs,
-                               SortedMap<String, List<Integer>> fileNamesToIds) {
+    public ScriptContentParser(SortedMap<Integer, TranslationString> idsToDialogs, SortedMap<String, List<Integer>> fileNamesToIds) {
         this.idsToDialogs = idsToDialogs;
         this.fileNamesToIds = fileNamesToIds;
     }
@@ -56,7 +51,7 @@ public class ScriptContentParser implements IParser {
     @Override
     public void parse(Path file) throws IOException {
         // Read the file
-        String content = new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
+        String content = Files.readString(file);
         String filename = file.getFileName().toString();
 
         // Initialize a new ID list for the given filename
@@ -66,14 +61,15 @@ public class ScriptContentParser implements IParser {
         Matcher addJournalEntryMatcher = ADDJOURNALENTRY.matcher(content);
         while (addJournalEntryMatcher.find()) {
             // Parse the corresponding string ID
-            int id = Integer.valueOf(addJournalEntryMatcher.group(1));
+            int id = Integer.parseInt(addJournalEntryMatcher.group(1));
             // If the string ID was already parsed in a dialog file, move on
             if (idsToDialogs.containsKey(id)) {
                 continue;
             }
             // Parse the corresponding string text
             TranslationString dialogString = TranslationString
-                    .create(addJournalEntryMatcher.group(2), TranslationString.Type.SCRIPT_JOURNAL, filename);
+                    .create(addJournalEntryMatcher.group(addJournalEntryMatcher.groupCount()),
+                            TranslationString.Type.SCRIPT_JOURNAL, filename);
             // Store the ADDJOURNALENTRY string with its IDs
             idsToDialogs.put(id, dialogString);
             ids.add(id);
@@ -83,15 +79,15 @@ public class ScriptContentParser implements IParser {
         Matcher displayStringHeadMatcher = DISPLAYSTRINGHEAD.matcher(content);
         while (displayStringHeadMatcher.find()) {
             // Parse the corresponding string ID
-            int id = Integer.valueOf(displayStringHeadMatcher.group(2));
+            int id = Integer.parseInt(displayStringHeadMatcher.group(2));
             // If the string ID was already parsed in a dialog file, move on
             if (idsToDialogs.containsKey(id)) {
                 continue;
             }
             // Parse the corresponding string text
-            TranslationString dialogString = TranslationString
-                    .create("(" + displayStringHeadMatcher.group(1) + ") " + displayStringHeadMatcher.group(3),
-                            TranslationString.Type.SCRIPT_HEAD, filename);
+            TranslationString dialogString = TranslationString.create("(" + displayStringHeadMatcher.group(1) + ") " +
+                            displayStringHeadMatcher.group(displayStringHeadMatcher.groupCount()), TranslationString.Type.SCRIPT_HEAD,
+                    filename);
             // Store the DISPLAYSTRINGHEAD string with its IDs
             idsToDialogs.put(id, dialogString);
             ids.add(id);
@@ -101,15 +97,15 @@ public class ScriptContentParser implements IParser {
         Matcher displayStringWaitMatcher = DISPLAYSTRINGWAIT.matcher(content);
         while (displayStringWaitMatcher.find()) {
             // Parse the corresponding string ID
-            int id = Integer.valueOf(displayStringWaitMatcher.group(2));
+            int id = Integer.parseInt(displayStringWaitMatcher.group(2));
             // If the string ID was already parsed in a dialog file, move on
             if (idsToDialogs.containsKey(id)) {
                 continue;
             }
             // Parse the corresponding string text
-            TranslationString dialogString = TranslationString
-                    .create("(" + displayStringWaitMatcher.group(1) + ") " + displayStringWaitMatcher.group(3),
-                            TranslationString.Type.SCRIPT_HEAD, filename);
+            TranslationString dialogString = TranslationString.create("(" + displayStringWaitMatcher.group(1) + ") " +
+                            displayStringWaitMatcher.group(displayStringHeadMatcher.groupCount()), TranslationString.Type.SCRIPT_HEAD,
+                    filename);
             // Store the DISPLAYSTRINGWAIT string with its IDs
             idsToDialogs.put(id, dialogString);
             ids.add(id);
@@ -124,8 +120,8 @@ public class ScriptContentParser implements IParser {
     }
 
     @Override
-    public String getAllowedExtension() {
-        return "BAF";
+    public Set<String> getAllowedExtensions() {
+        return Set.of("BAF", "d");
     }
 
     @Override
